# PaperCompiler

./: pyproject.toml
PaperC-app/paperc/: pubspec.yaml
PaperC-app/paperc/android/app/: build.gradle
PaperC-app/paperc/android/app/src/main/: AndroidManifest.xml
PaperC-app/paperc/android/app/src/main/kotlin/com/example/paperc/: MainActivity.kt
PaperC-app/paperc/ios/Runner/: Info.plist
PaperC-app/paperc/ios/Runner.xcodeproj/: project.pbxproj
PaperC-app/paperc/lib/: main.dart  photo_input copy.dart  photo_input.dart  text_input.dart
PaperC-app/paperc/linux/: CMakeLists.txt  my_application.cc
PaperC-app/paperc/macos/Runner.xcodeproj/: project.pbxproj
PaperC-app/paperc/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
PaperC-app/paperc/macos/Runner/Configs/: AppInfo.xcconfig
PaperC-app/paperc/test/: widget_test.dart
PaperC-app/paperc/web/: index.html  manifest.json
PaperC-app/paperc/windows/: CMakeLists.txt
PaperC-app/paperc/windows/runner/: Runner.rc  main.cpp
PaperC-backend/: .gitignore
PaperC-backend/paperc/: client.py  run_code.py  server.py
paperc/: run_code.py  server.py
