[tool.poetry]
name = "paperc"
version = "0.1.0"
description = ""
authors = ["imno <Krzysztof.jan.andrzejewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
requests = "^2.31.0"
pytesseract = "^0.3.10"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
